Fixed the damn align and size on the buttons on the pricing section!!!

--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -122,9 +122,6 @@ p {
   text-align: center;
 }
 
-.align {
-  margin-bottom: 57px;
-}
 
 .card {
   height: 100%;
